# clouddirve2_gui

./: .gitignore  README.md  clouddrive.proto  download-proto.cjs  gen-icons.cjs  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
backend/: grpc-client.js  package-lock.json  package.json  server.js
src/: App.tsx  index.css  types.ts  utils.ts
src-tauri/: Cargo.toml  app.manifest  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: grpc.rs  lib.rs  main.rs
src/api/: client.ts  tauri.ts
src/components/: MediaViewer.tsx  Toast.tsx
src/contexts/: AppContext.tsx  ClipboardContext.tsx  ThemeContext.tsx
src/pages/: Account.tsx  Backup.tsx  CloudAPIs.tsx  FileBrowser.tsx  Login.tsx  MountPoints.tsx  OfflineTasks.tsx  Settings.tsx  SystemInfo.tsx  Tasks.tsx
