[package]
name = "happycd2"
version = "1.0.1"
description = "CloudDrive2 GUI Manager"
authors = ["HappyCD2"]
edition = "2021"

[lib]
name = "happycd2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
arboard = "3"

[features]
custom-protocol = ["tauri/custom-protocol"]
